# sender_email

./: .env  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  generation.py  mail.py  message.py  models.py  views.py
app/templates/: index.html  mess.html  page_not_found.html  success.html  verifypage.html
