[tool.poetry]
name = "send-email"
version = "0.1.0"
description = ""
authors = ["KhamzinAdel <khamzin.adel@mail.ru>"]
readme = "README.md"
packages = [{include = "send_email"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
validate_email = "^1.3"
py3dns = "^3.2.1"
flask-sqlalchemy = "^3.0.2"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
